--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ constantly==23.10.4
 cryptography==46.0.3
 daphne==4.2.1
 Django==5.2.7
+django-cors-headers==4.6.0
 django-environ==0.12.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
