--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aioice==0.10.1
+aiortc==1.14.0
 asgiref==3.10.0
 attrs==25.4.0
 autobahn==25.10.1
 Automat==25.4.16
+av==16.0.1
+bidict==0.23.1
 certifi==2025.10.5
 cffi==2.0.0
 channels==4.3.1
@@ -11,25 +15,34 @@ constantly==23.10.4
 cryptography==46.0.3
 daphne==4.2.1
 Django==5.2.7
-django-cors-headers==4.6.0
+django-cors-headers==4.9.0
 django-environ==0.12.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+dnspython==2.8.0
+google-crc32c==1.7.1
+h11==0.16.0
 hyperlink==21.0.0
 idna==3.11
+ifaddr==0.2.0
 incremental==24.7.2
 msgpack==1.1.2
 ngrok==1.5.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
+pyee==13.0.0
 PyJWT==2.10.1
+pylibsrtp==1.0.0
 pyOpenSSL==25.3.0
 python-dotenv==1.2.1
+python-engineio==4.12.3
+python-socketio==5.15.0
 redis==7.0.0
 requests==2.32.5
 service-identity==24.2.0
 setuptools==80.9.0
+simple-websocket==1.1.0
 sqlparse==0.5.3
 stripe==13.0.1
 Twisted==25.5.0
@@ -38,4 +51,5 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 websockets==15.0.1
+wsproto==1.3.2
 zope.interface==8.0.1
